--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,10 +25,12 @@ base64 = "0.21"
 chrono = {version = "0.4", default-features = false, features = ["alloc", "clock"] }
 dirs = "5"
 encoding_rs = "0.8"
+hostname = "0.3"
 libc = "0.2"
 log = "0.4"
 once_cell = "1"
 rayon = "1.7"
+reqwest = {version = "0.11", features = ["json"] }
 rusqlite = {version = "0.29", features = ["bundled"] }
 serde = {version = "1", features = ["derive"] }
 serde_json = "1"
