feat: permitir instalación de dependencias frontend sin bloqueo del archivo lock

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
 
       # 4️⃣ Frontend deps
       - name: Install frontend dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install --no-frozen-lockfile
 
       # 5️⃣ Rust toolchain
       - name: Install Rust stable
