--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "react-dom": "^19.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "react-markdown": "^8.0.0",
+    "remark-gfm": "^3.0.1",
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
