--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ chrono = {version = "0.4", default-features = false, features = ["alloc", "clock
 dirs = "5"
 encoding_rs = "0.8"
 hostname = "0.3"
+jsonwebtoken = "9"
 libc = "0.2"
 log = "0.4"
 once_cell = "1"
