--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,7 @@ hostname = "0.3"
 jsonwebtoken = "9"
 libc = "0.2"
 log = "0.4"
+mdns-sd = "0.17"
 once_cell = "1"
 rayon = "1.7"
 reqwest = {version = "0.11", features = ["json"] }
