--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,7 @@ serde = {version = "1", features = ["derive"] }
 serde_json = "1"
 serde_yaml = "0.9"
 sha2 = "0.10"
+sysinfo = "0.30"
 tauri = {version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-http = "2"
