--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
+    "react-grid-layout": "^2.2.2",
+    "react-markdown": "^8.0.0",
+    "react-resizable": "^3.1.3",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "react-markdown": "^8.0.0",
-    "remark-gfm": "^3.0.1",
-    "rehype-raw": "^6.1.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
