--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@babel/standalone": "^7.29.1",
+    "@fluentui/react-components": "^9.73.0",
     "@fluentui/react-icons": "^2.0.318",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
